siberian/app/sae/design/desktop/flat/css/style.css
/* ... */
/** fix-crop **/
.pp_content.content.content-color {
    height: 100% !important;
}

/** custom icônes **/
.fa-sort {
    cursor: ns-resize;
}

.option_value .actions .fa-sort {
    cursor: ew-resize;
    transform: rotate(90deg);
}

.option_value .ion-admin-selected {
    display: none;
}

.fa-arrows {
    cursor: move;
}

/** bootstrap overide **/
label {
    font-weight: 200;
}

#left-sidebar-wrapper a {
    font-weight: 200;
}

a {
    letter-spacing: 0.4px;
}

.vcenter {
    display: flex;
    align-items: center;
}

.dropdown-menu > li > a:nth-last-child(1) {
    width: 100%;
    margin: 0;
}

/** fix-bootstrap **/
.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
    border-top: none;
}

/* DATATABLE */
.dataTables_filter input[type="search"] {
    margin-left: 5px;
    border: none;
}

table.dataTable thead th.sorting {
    background-image: url("../images/table/sort_both_v1.png");
    background-repeat: no-repeat;
    background-position: right center;
}

table.dataTable thead th.sorting_asc {
    background-image: url("../images/table/sort_asc_v1.png");
    background-repeat: no-repeat;
    background-position: right center;
}

table.dataTable thead th.sorting_desc {
    background-image: url("../images/table/sort_asc_v1.png");
    background-repeat: no-repeat;
    background-position: right center;
}

.table > thead > tr > th {
    padding-right: 30px;
}

/** Form elements */
.sb-nav {
    margin-top: 20px;
}

form.sb-form label {
    padding-top: 2px;
}

.sb-custom-radio .sb-form-radio {
    margin: 0;
    width: 22px;
}

.sb-cb {
    clear: both;
}

.sb-radio-label {
    padding-left: 5px;
}

div.feature-upload-placeholder {
    margin-top: 6px;
}

div.feature-upload-placeholder img {
    border-radius: 5px;
    width: auto;
    max-width: 100%;
    max-height: 128px;
}

div.feature-upload-placeholder button {
    position: absolute;
    top: 36px;
    left: 15px;
    border-top-right-radius: 0;
    border-bottom-left-radius: 0;
}

.feature-block-create {
    display: none;
}

.feature-block-list {

}

.feature-block-background {

}

.feature-block-layout {

}

.sb-mini-delete button {
    border: 0;
    background: inherit;
    font-size: inherit;
    color: inherit;
}

/* Places search settings*/
#search_editor fieldset {
    margin: 12px;
}

/* End of Places search settings*/

/* Css-only accordion*/
.transition {
    transition: all 0.25s ease-in-out;
}

.subcontent input[type=checkbox].toggle_panel {
    position: absolute;
    cursor: pointer;
    width: 100%;
    height: 41px;
    z-index: 999;
    opacity: 0;
}

.subcontent input[type=checkbox].toggle_panel:checked ~ .transition {
    margin-top: 0;
    max-height: 0;
    opacity: 0;
    transform: translate(0, 50%);
}

input[type=submit]:hover {
    background-color: black;
}

/* End of Css-only accordion*/

.development-warning div.alert {
    margin-right: 20px;
    margin-bottom: 0;
}

/** OSX Webkit outline */
:focus {
    outline-color: transparent;
    outline-style: none;
}

.development-responsive {
    border: none !important;
    padding: 6px !important;
    text-align: center !important;
    margin: 0 !important;
    border-radius: 0 !important;
    border-top: 2px solid #8a6d3b !important;
    position: fixed;
    bottom: 0;
    z-index: 65500;
    width: 100%;
}

.iphone_content {
    width: 100%;
    height: 100%;
}

/**div#iphone {
    width: 380px;
    height: 720px;
    position: absolute;
    top: 0;
    right: 10px;
}*/

div#iphone {
    width: 46vh;
    height: 80vh;
    position: absolute;
    top: 0;
    right: 10px;
}

/** LOADER **/
div#mask-overview.mask {
    display: none;
    background-color: rgba(0, 0, 0, 0.4);
    left: 12px;
    position: relative;
    top: calc(-1 * 80vh + 7px);
    width: calc(46vh - 24px);
    height: calc(80vh - 24px);
    z-index: 10002;
    border-radius: 20px;
}

div#phone-bar {
    left: 24px;
    position: relative;
    top: calc(-1 * 80vh + 12px);
    width: calc(46vh - 48px);
    height: calc(80vh - 24px);
    z-index: 10002;
    border-radius: 20px;
    color: white;
    display: none;
    pointer-events: none;
    user-select: none;
    font-size: 1.5vh;
}

@media (max-width: 1700px) {
    div#iphone {
        width: 46vh;
        height: 80vh;
    }

    div#mask-overview.mask {
        top: calc(-1 * 80vh + 7px);
        width: calc(46vh - 24px);
        height: calc(80vh - 24px);
    }
}

@media (max-width: 1420px) {
    div#iphone {
        width: 44vh;
        height: 80vh;
    }

    div#mask-overview.mask {
        top: calc(-1 * 80vh + 7px);
        width: calc(44vh - 24px);
        height: calc(80vh - 24px);
    }

    div#phone-bar {
        width: calc(44vh - 48px);
    }
}

div#overview.affix {
    right: 0;
    top: 10px;
}

.form-field-error {
    color: #a94442;
    font-weight: bold;
}

p.open-edit,
p.close-edit {
    font-size: 14px;
    text-align: right;
}

p.open-edit i,
p.close-edit i {
    font-size: 18px !important;
    margin-top: -3px;
    margin-right: 6px;
}

tr.edit-form {
    border-bottom: 2px solid #b2b1b1;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
}

#page .nav-tabs {
    border: 0 !important;
    margin-left: 15px;
}

#page .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
    border: 0 !important;
    border-bottom: 1px solid transparent !important;
    font-weight: bold;
}

#page .nav-tabs > li > a:hover {
    border-bottom: 1px solid transparent !important;
}

#page .nav > li > a:hover {
    background-color: white;
}

.sb-pagination {
    float: right;
    margin-bottom: 20px;
}

.sb-pagination .btn.color-blue {
    padding: 0 8px 0 6px;
}

.sb-pager-pages,
.sb-pager-pages:hover {
    color: initial !important;
    background-color: initial !important;
}
/* ... */

